--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "i": "^0.3.6",
     "npm": "^6.9.0",
     "vue": "^2.6.8",
+    "vue-flip": "^0.2.5",
     "vue-loader": "^11.0.0",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.6.8"
