Cleaning up and add typeform link

--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "axios-cache-adapter": "^2.3.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.13",
+    "document-ready": "^2.0.2",
     "i": "^0.3.6",
     "npm": "^6.9.0",
+    "postscribe": "^2.0.8",
     "vue": "^2.6.8",
     "vue-flip": "^0.2.5",
     "vue-loader": "^11.0.0",
     "vue-router": "^3.0.1",
+    "vue-script-component": "^0.1.7",
     "vue-template-compiler": "^2.6.8"
   },
   "devDependencies": {
