--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "vue-router": "^3.0.1",
     "vue-script-component": "^0.1.7",
     "vue-socket.io": "^2.1.1-b",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "vuelidate": "^0.7.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
