--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "npm": "^6.9.0",
     "postscribe": "^2.0.8",
     "vue": "^2.6.10",
+    "vue-bootstrap-toasts": "^1.0.4",
     "vue-flip": "^0.2.5",
     "vue-loader": "^11.0.0",
     "vue-router": "^3.0.1",
