--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.13",
     "document-ready": "^2.0.2",
+    "firebase": "^5.9.1",
     "i": "^0.3.6",
     "nodemon": "^1.18.10",
     "npm": "^6.9.0",
