Vuex setup working for cards & types
created cards.js module for vuex

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "axios": "^0.18.0",
     "axios-cache-adapter": "^2.3.0",
+    "babel-preset-vue": "^2.0.2",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.13",
     "document-ready": "^2.0.2",
@@ -34,7 +35,8 @@
     "vue-script-component": "^0.1.7",
     "vue-socket.io": "^2.1.1-b",
     "vue-template-compiler": "^2.6.10",
-    "vuelidate": "^0.7.4"
+    "vuelidate": "^0.7.4",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -45,7 +47,8 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
-    "babel-preset-env": "^1.3.2",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.6.0",
