--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue-router": "^3.0.1",
     "vue-script-component": "^0.1.7",
     "vue-socket.io": "^2.1.1-b",
+    "vue-socket.io-extended": "^3.2.1",
     "vue-template-compiler": "^2.6.10",
     "vuelidate": "^0.7.4",
     "vuex": "^3.1.0"
