--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "i": "^0.3.6",
     "nodemon": "^1.18.10",
     "npm": "^6.9.0",
+    "object-hash": "^1.3.1",
     "postscribe": "^2.0.8",
     "socket.io-client": "^2.2.0",
     "vue": "^2.6.10",
